--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,3 +1,4 @@
 <div class="container">
+  <h1>This code is in server.component.html</h1>
   <h1>{{'Server'}} with ID {{ serverId }} is {{ getServerStatus() }}</h1>
 </div>
