--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-server></app-server>
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>This code is in app.component.html</h1>
+  </div>
+
+  <app-servers></app-servers>
+</div>
